task(java): pre-changes needed to upgrade to java 25, includes jersey, bytebuddy and other lib changes.
ref: #33865